[package]
name = "prime-iter"
version = "0.1.0"
edition = "2021"
authors = ["booleancoercion"]
license = "MIT OR Apache-2.0"
description = "An incremental-sieve based prime generator"
repository = "https://github.com/booleancoercion/prime-iter"
readme = "README.md"
keywords = ["primes", "prime", "math", "iterator", "generator"]
categories = ["mathematics", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "simple"
harness = false

[features]
default = ["std"]
std = []
